--- a/day1/MyAndroidApp/MyAndroidApp/Resources/layout/content_main.xml
+++ b/day1/MyAndroidApp/MyAndroidApp/Resources/layout/content_main.xml
@@ -1,30 +1,25 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main">
-
+    android:layout_height="match_parent">
     <TextView
-        android:layout_width="wrap_content"
+        android:text="Hello Android!"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="@dimen/abc_action_bar_default_height_material"
-        android:text="Hello Android!" />
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:id="@+id/textView1" />
 
     <Button
         android:text="Button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button1" />
 
     <Button
-        android:textAllCaps="false"
         android:text="@string/showbookslist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonshowlist" />
 
